# my-agent-stuff

./: README.md  package.json
.pi/todos/: f3195efa.md
extensions/: amp-frame.ts  edit-proposed-text.ts  jina-web-tools.ts
extensions/read-many/: index.ts  rendering.ts  summary.ts  tool.ts
extensions/toolview-compact/: commands.ts  config.ts  index.ts  rendering.ts  sanitize.ts  summaries.ts  tools.ts  types.ts
extensions/toolview-compact/__tests__/: sanitize.test.ts
extensions/user-message-frame/: frame.ts  index.ts
mcp-servers/edit-proposed-text/: Cargo.toml
mcp-servers/edit-proposed-text/src/: main.rs
pi-themes/: base16-tomorrow-night.json
plans/: toolview-compact-implementation-plan.md  user-message-frame-plan.md
skills/commit/: SKILL.md
skills/create-pr/: SKILL.md
skills/edit-draft/: SKILL.md
skills/jj-workspaces/: SKILL.md
skills/jujutsu/: SKILL.md
skills/linear/: SKILL.md
skills/review-pr/: SKILL.md
