[package]
name = "edit-proposed-text-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "process"] }
serde = { version = "1", features = ["derive"] }
schemars = "1.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
